--- a/responsive.css
+++ b/responsive.css
@@ -2,7 +2,7 @@
 .sidebar{
 	z-index:2;
 	width:250px;
-	height:250px;
+	height:270px;
 }
 
 /*videosectioon*/
@@ -97,6 +97,10 @@ video{
 
   }
 
+}
+.contact-info{
+	width:100%;
+	transform:translate(0%);
 }
 
 @media (max-width:768px) and (min-width:481px){
